# icp_template

./: .gitignore  BUILD.md  README.md  __mgr__.py  dfx.json  package-lock.json  package.json
backend/: #.#BACKEND.md  Cargo.toml  lib.rs
frontend/: #.#FRONTEND.md  package.json  svelte.config.js  tsconfig.json  vite.config.js
frontend/lib/: actor.ts
frontend/routes/: +page.svelte
frontend/routes/entry/: +page.svelte  entry.ts
frontend/routes/main/: +page.svelte  main.ts
frontend/routes/main/styles/: main-page.css
icons/: #.#ICONS.md
shared/: #.#SHARED.md
